--- a/DTShopping/Web.config
+++ b/DTShopping/Web.config
@@ -15,6 +15,9 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
+    <add key="CompanyId" value="17" />
+    <add key="ApiUrl" value="http://bshopapi.bisplindia.in/api/Home/" />
+    <add key="ImageUrl" value="http://shopimage.bisplindia.in/" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
